# GravityDelivery

./: Build_VS2015.bat  Build_VS2017.bat  CMakeLists.txt  README.md  WinMain.cpp  説明書.txt
Game/: Array.cpp  Array.h  DebugConsole.cpp  DebugConsole.h  Easings.cpp  Easings.h  GameController.cpp  GameController.h  GameMain.cpp  GameMain.h  GameObject.cpp  GameObject.h  GameObjectHit.cpp  GameObjectHit.h  GameObjects.cpp  GameObjects.h  GamePause.cpp  GamePause.h  GameResource.cpp  GameResource.h  GameStage.cpp  GameStage.h  GameTimer.cpp  GameTimer.h  GameUtils.cpp  GameUtils.h  InputManager.cpp  InputManager.h  KeyFrame.cpp  KeyFrame.h  SceneLogo.cpp  SceneLogo.h  SceneManager.cpp  SceneManager.h  ScenePlay.cpp  ScenePlay.h  SceneResult.cpp  SceneResult.h  SceneTitle.cpp  SceneTitle.h  (+6 more)
Game/Shaders/: gaussian_pixel_x.fx
Resources/: .gitignore
Resources/Audio/: activate.license.txt  beam-gun03.license.txt  beam-gun05.license.txt  bomb1.license.txt  button45.license.txt  button55.license.txt  cancel1.license.txt  clear.license.txt  coin.license.txt  deactivate.license.txt  gun-fire04.license.txt  gun-fire05.license.txt  short01a.license.txt  spo_ge_mbat02.license.txt  system31.license.txt  teleport01.license.txt
Resources/Audio/BGM/: bgm_maoudamashii_healing17.license.txt  game_maoudamashii_3_theme01.license.txt  michi-tono-kaikou.license.txt  uchuu-tanken.license.txt
Resources/Fonts/: uzura.readme.txt
Resources/Textures/: bomb.license.txt  planets.license.txt
